fix layout problem

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -16,7 +16,7 @@ body{
 
 .header {
     width:100%;
-    position:fixed;
+    position:absolute;
     top:0px;
 }
 
@@ -59,19 +59,25 @@ textarea {
     font-size: 14px;
     padding: 0.5em;
     width: 100%;
-    height: 400px;
     box-sizing: border-box;
     border: 1px solid #ddd;
     resize: none;
+    min-height: 600px;
+    height: 100%;
+}
+
+.example {
+    text-align: left;
+    position:relative;
+    margin: 0 auto;
 }
 
 .resume {
     text-align: left;
-    overflow-y:scroll;
     position:relative;
     margin: 0 auto;
-    width: 960px;
+    left: 20px;
+    top: 0px;
     height: 600px;
-    box-shadow: 0 19px 60px rgba(0, 0, 0, 0.3);
     border-radius: 2px;
 }
